# ragIQ

./: .gitignore  README.md  data.tar.xz  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
MemoIQ/: DOCUMENTATION.md  README.md  TEST_RESULTS_SUMMARY.md  __init__.py  config.py  schema.py  test_workflow.py
MemoIQ/agents/: __init__.py  base.py  consistency_checker.py  coordinator.py  extract_covenants.py  extract_financials.py  human_proxy.py  memo_writer.py  orchestrator.py  policy_checker.py  retriever.py  synthesize_risks.py  template_analyzer.py
MemoIQ/policy/: README.md
MemoIQ/prompts/: __init__.py  field_prompts.py  section_prompts.py
MemoIQ/rag/: __init__.py  doc_ingest.py  rag_adapter.py
MemoIQ/runs/5350f8ba-39f8-4a57-9fcf-68beea98e7ff/: template_schema.json
MemoIQ/runs/5e13f920-9e8c-4f54-8090-2b2bcd05827a/: validation_report.json
MemoIQ/runs/78e6efa7-ede1-410a-a918-72a72e800491/: template_schema.json  validation_report.json
MemoIQ/runs/c4ef0a5a-a504-4d66-b650-cc0e128bc097/: template_schema.json
MemoIQ/runs/e4dbe5da-957c-4dd3-b2c9-9a0b179a1b60/: evidence_pack.json  extracted_fields.json  template_schema.json  validation_report.json
MemoIQ/runs/e616e90f-06aa-496d-b12b-37dfa7daa995/: evidence_pack.json  (+1 more)
MemoIQ/template/: __init__.py  template_filler.py  template_parser.py
MemoIQ/utils/: __init__.py  citations.py  diff.py  io.py  metrics.py
docs/: pinecone-data-retention.md
documentation/: 01-overview.md  02-setup.md  03-architecture.md  04-parsing.md  05-chunking.md  06-embedding-indexing.md  07-retrieval.md  08-configuration.md  09-azure-openai.md  10-providers.md  11-storage.md  12-schemas.md  13-utilities.md  14-api-reference.md  15-troubleshooting.md
src/: __init__.py
src/config/: __init__.py  chunking.py  parsing.py  parsing_strategies.py  prompts.py  retrieval.py
src/core/: __init__.py  base.py  dataclasses.py  interfaces.py
src/formatters/: __init__.py  image.py  markdown.py  table.py
src/pipelines/: __init__.py  orchestrator.py
src/providers/: __init__.py
src/schema/: __init__.py  chunk.py  document.py
src/storage/: __init__.py
src/tests/: __init__.py  test_chunking_pipeline.py  test_full_parsing_pipeline.py
src/utils/: __init__.py  bbox.py  checkpoint.py  env.py  exceptions.py  ids.py  io.py  memory.py  tokens.py  ui.py
(+1418 files in other folders)
